<resources>
    <string name="app_name">NIDAR</string>
    <string name="user_name">Name</string>
    <string name="phone_number">Phone Number (10 digit number)</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_sign_in">Verify OTP and Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_phone_number1">Contact 1\'s 10 digit Number [REQUIRED]</string>
    <string name="contact_phone_number2">Contact 2\'s 10 digit Number [OPTIONAL]</string>
    <string name="contact_phone_number3">Contact 3\'s 10 digit Number [OPTIONAL]</string>
    <string name="contact_phone_number4">Contact 4\'s 10 digit Number [OPTIONAL]</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="otp_verification"><b>OTP Verification</b></string>
    <string name="contact_details"><b>Contact Details</b></string>
    <string name="user_registration"><b>User Registration</b></string>
    <string name="speech_on">Turn ON Speech Recognition</string>
    <string name="speech_off">Turn OFF Speech Recognition</string>
    <string name="problem_text"><b>Are you in a problem?</b></string>
    <string name="yes">Yes?</string>
    <string name="no">No?</string>
    <string name="low_battery_on">Turn ON Battery Manager</string>
    <string name="low_battery_off">Turn OFF Battery Manager</string>
    <string name="fall_detection_on">Turn ON Fall Detection</string>
    <string name="fall_detection_off">Turn OFF Fall Detection</string>
    <string name="app_icon">App Icon</string>
	<string name="menu_signout">Signout</string>
    <string name="menu_help_feedback">Help and Feedback</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_about">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="feedback_text">Feedback</string>
    <string name="send">Send</string>
    <string name="guide">Guide</string>
    <string name="overview">Overview</string>
    <string name="speech_recognition">Speech Recognition</string>
    <string name="fall_detection">Fall Detection</string>
    <string name="battery_manager">Battery Manager</string>
    <string name="activation_process">Activation Process</string>
    <string name="update_details_guide">Update Details</string>

    <string name="overview_guide">
        <![CDATA[
            <html>
                <head></head>
                <body style="text-align:justify;color:black;">
                    “Nidar - Universal Safety Application” is a personal safety and security application. It takes
                    the necessary actions to bring effective help to you. This includes sending alert messages and
                    siren alarm.
                </body>
            </html>
        ]]>
    </string>

    <string name="speech_recognition_guide">
        <![CDATA[
            <html>
                <head></head>
                <body style="text-align:justify;color:black;">
                    NIDAR can be activated by voice commands. You only need to say “SOS”, “Help Me”, “Nidar” or “Mayday”. It is
                    better to say one of these keywords multiple times to have a higher chance of getting NIDAR
                    activated. Speech Recognition will work even when your mobile phone is locked or is kept away
                    from you. Once any of the defined keywords are detected, a dialog will be prompted asking for
                    the same. If dialog is not answered within a time frame, an alert message will be sent containing
                    your location.
                </body>
            </html>
        ]]>
    </string>

    <string name="fall_detection_guide">
        <![CDATA[
            <html>
                <head></head>
                <body style="text-align:justify;color:black;">
                    NIDAR also detects when you fall. Once, a fall is detected, a dialog will be prompted asking for
                    the same. If dialog is not answered within a time frame, an alert message will be sent containing
                    your location.
                </body>
            </html>
        ]]>
    </string>

    <string name="battery_manager_guide">
        <![CDATA[
            <html>
                <head></head>
                <body style="text-align:justify;color:black;">
                    NIDAR keeps track of your battery level. When the battery level is too low, a dialog will be
                    prompted asking for the same. If dialog is not answered within a time frame, an alert message
                    will be sent containing your location.
                </body>
            </html>
        ]]>

    </string>

    <string name="activation_process_guide">
        <![CDATA[
            <html>
                <head></head>
                <body style="text-align:justify;color:black;">
                    To start “Speech Recognition”, “Fall Detection”, “Battery Manager”, just click on the respective
                    buttons on the main activity. Once clicked, service respective to that button will be activated
                    and will ensure your security. The timings for the alert dialog will be for about 15 seconds. It
                    is mandatory to enable GPS beforehand for proper functioning of app. You can also update the
                    contact details by clicking on the “Update Details” button.
                </body>
            </html>
        ]]>
    </string>

    <string name="developed_by">Developed By</string>
    <string name="supervised_by">Supervised By</string>
    <string name="tanya_dua">Tanya Dua</string>
    <string name="divesh_bhagat">Divesh Bhagat</string>
    <string name="nitin_thakur">Nitin Thakur</string>
    <string name="p_k_hazra">P. K. Hazra</string>
    <string name="sushila_madan">Sushila Madan</string>

    <string name="auto_start_message">
        To keep app functioning even after the app is killed. Please allow it to autorestart.
    </string>
</resources>
