<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nidar.MainActivity" >


    <item
        android:id="@+id/guide"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/guide"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_help_feedback"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/menu_help_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/menu_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_index"
        android:title="@string/menu_signout"
        app:showAsAction="never" />
</menu>