<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="@integer/google_play_services_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name"
                    app:titleTextColor="#000000"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20dp"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="10dp"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:gravity="center"
                android:text="@string/overview_guide" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speech_recognition"
                android:textSize="20dp"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop = "10dp"
                android:gravity="center"
                android:text="@string/speech_recognition_guide"
                />

            <Button
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/fall_detection"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop = "10dp"
                android:gravity="center"
                android:text="@string/fall_detection_guide" />

            <Button
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:text="@string/battery_manager"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop = "10dp"
                android:gravity="center"
                android:text="@string/battery_manager_guide"
                />

            <Button
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:text="@string/activation_process"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop = "10dp"
                android:gravity="center"
                android:text="@string/activation_process_guide"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>