<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_update_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:text="@string/update_details"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/btn_speech_recognition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/speech_on"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/btn_low_battery_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/low_battery_on"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/btn_fall_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/fall_detection_on"
        android:textColor="@color/textColor"/>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_out"
        android:textColor="@color/textColor"/>

</LinearLayout>