<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">
    <!--android:id="@+id/text"-->

    <TextView
        android:id="@+id/tv_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:layout_margin="20dp"
        android:text="@string/problem_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Yes"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/yes"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/No"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/no" />
    </LinearLayout>
</LinearLayout>
