<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:background="@drawable/layout_shape"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/nidar"/>

        <TextView
            android:id="@+id/tv_user_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorPrimary"
            android:layout_margin="20dp"
            android:textSize="10pt"
            android:text="@string/user_registration"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            app:startIconTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/user_name"
            app:hintTextColor="@color/colorPrimary"
            android:textColor="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_phone_black_24dp"
            app:startIconTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            app:hintTextColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/textColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_generate_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:paddingStart="10pt"
            android:paddingEnd="10pt"
            android:layout_gravity="center"
            android:text="@string/generate_otp"
            android:textColor="@color/textColor"/>
    </LinearLayout>
</LinearLayout>